[package]
name = "timely_state"
version = "0.1.0"
authors = ["Matthew Brookes <mbrookes1304@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.1.2"
faster-rs = "0.9"
metrics = "0.11.1"
tempfile = "3"

[dependencies.rocksdb]
git = "https://github.com/matthewbrookes/rust-rocksdb"
branch = "master"
