[package]
name = "timely_state"
version = "0.1.0"
authors = ["Matthew Brookes <mbrookes1304@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.1.2"
metrics = "0.11.1"
serde = "1.0.89"
serde_derive = "1.0.89"
tempfile = "3"

[dependencies.rocksdb]
git = "https://github.com/matthewbrookes/rust-rocksdb"
branch = "log-mutex"

[dependencies.faster-rs]
git = "https://github.com/matthewbrookes/faster-rs"
branch="remove-serialisation-measure-locking"
